# raven

./: .env.example  .gitignore  README.md  alembic.ini  alpha_tools.py  llm.py  plan.md  pyproject.toml  raven_agent.py  requirements.txt  test_repl.py
alembic/: env.py  script.py.mako
alembic/versions/: 202510181200_create_hypotheses_table.py
data/artifacts/hypothesis-3511e2af-17d5-48e9-b342-e35a1270dcff/: validation_plan.json
data/artifacts/hypothesis-535a23dd-f920-4737-861f-611701917861/: market_data.json  news_sentiment.json
data/artifacts/hypothesis-71ac24c5-bc76-4476-a2ba-a43a5c2f79d6/: market_data.json
data/artifacts/hypothesis-7491fa3d-1510-4e14-822c-4d3be4aa63e0/: validation_plan.json
data/artifacts/hypothesis-9ff8a4a4-c88e-4969-a55e-5fee1dc2c014/: validation_plan.json
data/artifacts/hypothesis-c26e82e6-2f28-42f3-a350-95cebec79e72/: validation_plan.json
data/artifacts/hypothesis-e5c2a754-2aec-4a6d-be89-daa9bb55f81c/: market_data.json
data/artifacts/hypothesis-ee1d6328-873b-41a4-b449-e29b7bf83f23/: validation_plan.json
scripts/: test_repl.py
src/: vantage_tools.txt
src/hypothesis_agent/: __init__.py  auth.py  config.py  llm.py  logging.py  main.py  metrics.py  telemetry.py
src/hypothesis_agent/api/: router.py  ui.py
src/hypothesis_agent/api/templates/: landing.html
src/hypothesis_agent/connectors/: __init__.py  news.py  sec.py  yahoo.py
src/hypothesis_agent/db/: __init__.py  base.py  firebase.py  migrations.py  models.py  session.py
src/hypothesis_agent/models/: hypothesis.py
src/hypothesis_agent/orchestration/: __init__.py  langgraph_pipeline.py  python_sandbox.py  tool_catalog.py  yfinance_tools.py
src/hypothesis_agent/repositories/: __init__.py  hypothesis_repository.py
src/hypothesis_agent/services/: hypothesis_service.py
src/hypothesis_agent/storage/: __init__.py  artifact_store.py
src/hypothesis_agent/workers/: __init__.py  validation_worker.py
src/hypothesis_agent/workflows/: __init__.py  definitions.py  hypothesis_workflow.py  temporal_runtime.py
src/hypothesis_agent/workflows/activities/: __init__.py  validation.py
tests/: __init__.py  conftest.py  test_auth_integrations.py  test_config.py  test_hypothesis_endpoint.py  test_integrations.py  test_repositories.py  test_services.py  test_ui.py  test_workflow_activities.py  test_workflows.py
