[project]
name = "hypothesis-agent"
version = "0.1.0"
description = "Core services for the RAVEN hypothesis validation workflow."
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.19,<1",
    "alembic>=1.13,<2",
    "uvicorn[standard]>=0.30,<0.31",
    "langgraph>=0.0.52,<0.1",
    "composio-langchain>=0.4,<0.5",
    "langchain>=0.2,<0.3",
    "langchain-experimental>=0.0.58,<0.1",
    "httpx>=0.27,<0.28",
    "charset-normalizer>=3.3,<4",
    "chardet>=5,<6",
    "prometheus-client>=0.20,<0.21",
    "openai>=1.12,<2",
    "matplotlib>=3.8,<4",
    "reportlab>=4.1,<5",
    "yfinance>=0.2,<0.3"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.5,<0.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
