[project]
name = "hypothesis-agent"
version = "0.1.0"
description = "Core services for the RAVEN hypothesis validation workflow."
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "uvicorn[standard]>=0.30,<0.31",
    "langgraph>=0.0.52,<0.1",
    "langchain>=0.2,<0.3",
    "httpx>=0.27,<0.28",
    "charset-normalizer>=3.3,<4",
    "chardet>=5,<6",
    "prometheus-client>=0.20,<0.21",
    "openai>=1.12,<2",
    "matplotlib>=3.8,<4",
    "reportlab>=4.1,<5",
    "yfinance>=0.2.40",
    "pandas",
    "pytest",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "ruff>=0.5,<0.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
